--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -99,9 +99,23 @@ header h1{
     background-color:#C41419 ;
     opacity: 73%;
     color: #F9DC94;
-    height: 300px;
+    height: 250px;
     width: 500px;
     z-index: -3;
+    box-shadow: 1px 1px 5px #F9DC94;
+    border: 1px solid #F9DC94;
+    /* display: grid;
+    grid-template-rows: 240px;
+    grid-gap: 10px; */
+    background-color: #C41419;
+    color: #F9DC94;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 body {
