--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -97,25 +97,16 @@ header h1{
     margin-top: 80px;
     padding: 20px;
     background-color:#C41419 ;
-    /* opacity: 73%; */
     color: #F9DC94;
-    height: 250px;
-    width: 500px;
+    height: fit-content;
+    width: fit-content;
     z-index: -3;
     box-shadow: 1px 1px 5px #F9DC94;
     border: 1px solid #F9DC94;
-    /* display: grid;
-    grid-template-rows: 240px;
-    grid-gap: 10px; */
-    background-color: #C41419;
-    color: #F9DC94;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     align-items: center;
     justify-content: center;
-    text-align: center;
 }
 
 body {
@@ -151,7 +142,6 @@ body {
     margin-top: 80px;
     padding: 20px;
     background-color:#C41419 ;
-    /* opacity: 73%; */
     color: #F9DC94;
     height: 300px;
     width: 500px;
@@ -255,7 +245,6 @@ body {
     top: 50%;
     margin-top: -60px;
     background-color: #F9DC94;
-    /* opacity: 100%; */
     color: #C41419;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
@@ -273,7 +262,6 @@ body {
     top: 50%;
     margin-top: 100px;
     background-color: #C41419;
-    /* opacity: 100%; */
     color: #F9DC94;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
@@ -355,9 +343,7 @@ body {
     font-weight: 500;
     text-shadow: 0px 0px 5px #F9DC94;
     /* text-shadow: 1px 1px 5px white; */
-    /* color: #b5a264; */
     color: #C41419;
-    /* color: black; */
 }
 
 .filter {
@@ -421,7 +407,7 @@ fieldset {
     box-shadow: 1px 1px 5px #F9DC94;
     border: 1px solid #F9DC94;
     display: grid;
-    grid-template-rows: 240px;
+    grid-template-rows: 350px;
     grid-gap: 10px;
     background-color: #C41419;
     color: #F9DC94;
@@ -593,8 +579,7 @@ fieldset {
     
     box-shadow: 2px 2px 20px 10px #C41419;
     border: 1px solid #F9DC94;
-} 
-
+}
 
 #visitor-button {
     margin-top: 80px;
@@ -684,4 +669,23 @@ fieldset {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+#dad-joke-button {
+    margin-top: 20px;
+    background-color: #F9DC94;
+    color: #C41419;
+    width: 50%;
+    position: center;
+    font-weight: bold;
+}
+
+#dad-joke-button:hover {
+    box-shadow: 2px 2px 20px 10px #f5db9a;
+    border: 1px solid #C41419;
+}
+
+.product-picture {
+    width: 40%;
+    height: 40%;
 }
