--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,4 @@
+/* ----- SITE ----- */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,27 +6,25 @@
     border: none;
 }
 
+body {
+    background-image: url('https://source.unsplash.com/collection/9644740/1600x900');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
+/* ----- HEADER ----- */
 header {
-    /* display: flex; 
-    flex-wrap: wrap; 
-    align-items: center;
-    justify-content:space-around;
-    padding: 10px;
-    height: 100px;
-    width: 100%;
-    align-items: center;          
-    background: #C41419;    
-    color: #F9DC94;
-    margin: 0 auto; */
     padding: 20px 50px 20px 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background: radial-gradient(circle, rgba(0,0,0,0.7) 40%, rgba(0,0,0,0.3) 70%, rgba(0,0,0,0.2) 100%);    box-shadow: inset 0 0 5px black; */
     background: #C41419;
     box-shadow: inset 0 0 5px #F9DC94;
     margin-bottom: 20px;
+    width: 100%;
 }
 
 header h1{
@@ -40,6 +39,7 @@ header h1{
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    position: center;
     margin: 10px;
 }
 
@@ -48,6 +48,7 @@ header h1{
     cursor: pointer;
 }
 
+/* ----- LOGGED IN AS: ----- */
 .messageUnderHeader{
     position: relative;
     background-color:#F9DC94 ;
@@ -67,10 +68,12 @@ header h1{
     font-size: 20px;
 }
 
+/* ----- HOME PAGE ----- */
+/* ----- JOKE BOOK & JOKE ----- */
 .jokeLoader {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 40%;
+    left: 45%;
     width: 400px;
     height: 400px;
     margin:-60px 0 0 -60px;
@@ -109,32 +112,21 @@ header h1{
     justify-content: center;
 }
 
-body {
-    /* IMAGE API FOR DADS - SOME RANDOM IMAGES */
-    /* background-image: url('https://source.unsplash.com/1600x900/?dad'); */
-
-    /* IMAGE API FOR DADS - LESS RANDOM IMAGES BUT STILL SOME */
-    /* background-image: url('https://source.unsplash.com/1600x900/?collections/6759551/dad'); */
-
-    /* IMAGE API FOR CLASSIC CARS - THAT'S DAD RIGHT? */
-    /* background-image: url('https://source.unsplash.com/1600x900/?classic-cars'); */
-
-    /* IMAGE API FOR CIGARS - DAD'S PUFF CIGARS RIGHT? */
-    /* background-image: url('https://source.unsplash.com/1600x900/?cigar-lounge'); */
-
-    /* IMAGE API FOR GARAGE TOOLS - MIGHT BE DECENT? */
-    /* background-image: url('https://source.unsplash.com/1600x900/?garage-tools'); */
-
-    /* background-image: url('https://www.pexels.com/search/classic%20car/'); */
-    background-image: url('https://source.unsplash.com/collection/9644740/1600x900');
-
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    /* background-color: #a0171b; */
+#dad-joke-button {
+    margin-top: 20px;
+    background-color: #F9DC94;
+    color: #C41419;
+    width: 50%;
+    position: center;
+    font-weight: bold;
 }
 
+#dad-joke-button:hover {
+    box-shadow: 2px 2px 20px 10px #f5db9a;
+    border: 1px solid #C41419;
+}
+
+/* ----- LOG IN / REGISTER ----- */
 .loginMenu {
     text-align: center;
     margin-left: auto;
@@ -160,6 +152,20 @@ body {
     text-align: center;
     height: 250px;
     margin-top: -300px;
+}
+
+.signUpMenuContent{ 
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    padding: 20px;
+    background-color:#C41419 ;
+    color: #F9DC94;
+    height: 400px;
+    width: 500px;
+    z-index: -3;
+    border: 5px solid #F9DC94;
 }
 
 .signUpSection {
@@ -222,13 +228,9 @@ body {
     font-weight: bold;
 }
 
-.signInInputs label{
-    font-size: 20px;
-    margin-right: 10px;
-}
-
 .signInInputs input{
     height: 30px;
+    text-align: center;
 }
 
 .buttonContainer{
@@ -269,6 +271,22 @@ body {
     font-size: 20px;
 }
 
+.signUpButton{
+    cursor: pointer;
+    height: 50px;
+    width: 100px;
+    position: absolute;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: 45px;
+    background-color: #F9DC94;
+    color: #C41419;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 .loginButton:hover{
     background-color: #F9DC94;
     color:#6B7F82 ;
@@ -279,49 +297,12 @@ body {
     margin-left: 10px;
 }
 
-/* .pageContainer{
-    background-color: #F9DC94;
-    height: auto;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 80px;
-    align-items: center;
-    text-align: center;
-}
-
-.products {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: fit-content;
-    width: fit-content;
-}
-
-.single-product {
-    display: flex;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    background-color: #F9DC94;
-    margin: 2vh;
-    margin-left: 5vh;
-    margin-right: 5vh;
-    padding: 5vh;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: fit-content;
-    width: fit-content;
-} */
-
+/* ----- PRODUCTS PAGE ----- */
 #products {
     text-align: center;
 }
 
 .page-header-image {
-    /* background: url(could be cool); */
     background-color: #F9DC94;
     background-size: cover;
     background-position: center;
@@ -333,7 +314,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background: radial-gradient(circle, rgba(0,0,0,0.7) 40%, rgba(0,0,0,0.3) 70%, rgba(0,0,0,0.2) 100%);    box-shadow: inset 0 0 5px black; */
     background: #F9DC94;
     box-shadow: inset 0 0 5px #C41419;
     margin-bottom: 20px;
@@ -342,21 +322,20 @@ body {
 .header-text {
     font-weight: 500;
     text-shadow: 0px 0px 5px #F9DC94;
-    /* text-shadow: 1px 1px 5px white; */
     color: #C41419;
 }
 
+/* ----- SEARCH PRODUCTS ----- */
 .filter {
     display: grid;
     grid-template-columns: 25vw 1fr;
     padding: 10px 50px 10px 50px;
     grid-gap: 40px;
 
-    color: #F9DC94;
+    color: white;
     font-size: 1.6rem;
     font-weight: 300;
     margin-bottom: 8px;
-    /* background: orange; */
 }
 
 fieldset {
@@ -365,16 +344,13 @@ fieldset {
     height: 50px;
     display: flex;
     justify-content: flex-start;
-    /* background: orange; */
 }
-
 
 .filter .MuiInputBase-root {
     color: #F9DC94;
     font-size: 1.6rem;
     font-weight: 300;
     margin-bottom: 8px;
-    /* background: #C41419; */
 }
 
 .filter .MuiFormControl-root {
@@ -389,12 +365,11 @@ fieldset {
     border-bottom: 2px solid #F9DC94;
 }
 
-
+/* ----- PRODUCT GRID ----- */
 .products-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    /* grid-template-columns: repeat(4, 1fr); */
-    grid-gap: 20px;
+    grid-gap: 40px;
     padding: 20px 50px 20px 50px;
     align-items: center;
     justify-content: center;
@@ -408,12 +383,13 @@ fieldset {
     border: 1px solid #F9DC94;
     display: grid;
     grid-template-rows: 350px;
-    grid-gap: 10px;
+    height: 420px;
     background-color: #C41419;
     color: #F9DC94;
 }
 
 .product-data {
+    margin-top: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -421,8 +397,11 @@ fieldset {
     align-items: center;
     justify-content: center;
     text-align: center;
-    /* height: fit-content;
-    width: fit-content; */
+}
+
+.product-picture {
+    width: 30%;
+    height: 60%;
 }
 
 .product-card h1 {
@@ -432,13 +411,12 @@ fieldset {
 
 .product-card h2 {
     font-size: 1.4rem;
-    border-top: 3px solid #6B7F82;
+    width: 600px;
     padding-top: 10px;
 }
 
 .product-card h3 {
     font-size: 1.4rem;
-    /* padding-top: 10px; */
     margin-top: 15px;
 }
 
@@ -449,21 +427,12 @@ fieldset {
 }
 
 #product-button:hover {
-    /* margin-top: 20px;
-    background-color: #F9DC94;
-    color: #C41419; */
-    /* box-shadow: 2px 2px 20px 9px #9b0e13; */
     box-shadow: 2px 2px 20px 10px #f5db9a;
     border: 1px solid #C41419;
 } 
 
-
+/* ----- ADD PRODUCT ----- */
 .add-product {
-    /* display: grid;
-    grid-template-columns: 25vw 1fr;
-    padding: 10px 50px 10px 50px;
-    grid-gap: 40px; */
-
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -471,13 +440,11 @@ fieldset {
     align-items: center;
     justify-content: center;
     text-align: center;
-
     color: #F9DC94;
     font-size: 1.6rem;
     font-weight: 300;
     margin-bottom: 8px;
     width: 100%;
-    /* background: orange; */
 }
 
 fieldset {
@@ -486,9 +453,7 @@ fieldset {
     height: 50px;
     display: flex;
     justify-content: flex-start;
-    /* background: orange; */
 }
-
 
 .add-product .MuiInputBase-root {
     color: #F9DC94;
@@ -510,6 +475,7 @@ fieldset {
     border-bottom: 2px solid #F9DC94;
 }
 
+/* ----- PRODUCT MODAL ----- */
 .featured-product {
     position: fixed;
     top: 0;
@@ -518,19 +484,10 @@ fieldset {
     bottom: 0;
     backdrop-filter: blur(4px);
     background: rgba(0, 0, 0, 0.4);
-    /* font-family: 'Roboto', sans-serif; */
     color: #C41419;
 }
 
 .featured-product > .product-inquiry {
-    /* box-shadow: 1px 1px 5px #F9DC94;
-    border: 1px solid #F9DC94;
-    display: grid;
-    grid-template-rows: 240px;
-    grid-gap: 10px;
-    background-color: #C41419;
-    color: #F9DC94; */
-
     min-width: 480px;
     min-height: 30%;
     padding: 1rem;
@@ -538,7 +495,6 @@ fieldset {
     border: 2px solid #C41419;
     box-shadow: 2px 2px 20px 10px rgba(255, 255, 255, 0.6);
     background: #F9DC94;
-  
     position: absolute;
     max-height: 70%;
     top: 50%;
@@ -559,10 +515,10 @@ fieldset {
 
 .featured-product h3 {
     font-size: 1.4rem;
-    /* padding-top: 10px; */
     margin-top: 35px;
 }
 
+/* ----- PRODUCT MODAL ADMIN ----- */
 #admin-button {
     margin-top: 9px;
     background-color: #C41419;
@@ -574,9 +530,6 @@ fieldset {
     margin-top: 9px;
     background-color: #F9DC94;
     color: #C41419;
-
-    /* box-shadow: 2px 2px 20px 9px #9b0e13; */
-    
     box-shadow: 2px 2px 20px 10px #C41419;
     border: 1px solid #F9DC94;
 }
@@ -592,13 +545,11 @@ fieldset {
     margin-top: 80px;
     background-color: #F9DC94;
     color: #C41419;
-
-    /* box-shadow: 2px 2px 20px 9px #9b0e13; */
-    
     box-shadow: 2px 2px 20px 10px #C41419;
     border: 1px solid #F9DC94;
 } 
 
+/* ----- CART ----- */
 #cart {
     text-align: center;
 }
@@ -635,10 +586,6 @@ fieldset {
 }
 
 #cart-button:hover {
-    /* margin-top: 20px;
-    background-color: #F9DC94;
-    color: #C41419; */
-    /* box-shadow: 2px 2px 20px 9px #9b0e13; */
     box-shadow: 2px 2px 20px 10px #f5db9a;
     border: 1px solid #C41419;
 } 
@@ -649,6 +596,7 @@ fieldset {
     -webkit-text-stroke: .5px black;
 }
 
+/* ----- CONFIRM ORDER MODAL ----- */
 .confirmation-page {
     position: absolute;
     top: 0;
@@ -663,29 +611,35 @@ fieldset {
     min-width: 480px;
     min-height: 20%;
     padding: 2rem;
-    background: whitesmoke;
+    border: 5px solid #C41419;
+    background: #F9DC94;
+    color: #C41419;
     position: absolute;
     max-height: 70%;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-#dad-joke-button {
-    margin-top: 20px;
-    background-color: #F9DC94;
-    color: #C41419;
-    width: 50%;
-    position: center;
-    font-weight: bold;
+/* ----- ADMIN PAGE ----- */
+#userList {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    padding: 20px 50px 20px 50px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: fit-content;
+    width: 100%;
 }
 
-#dad-joke-button:hover {
-    box-shadow: 2px 2px 20px 10px #f5db9a;
-    border: 1px solid #C41419;
-}
-
-.product-picture {
-    width: 40%;
-    height: 40%;
+.single-user {
+    box-shadow: 1px 1px 5px #F9DC94;
+    border: 1px solid #F9DC94;
+    display: grid;
+    grid-template-rows: 30px;
+    grid-gap: 10px;
+    background-color: #C41419;
+    color: #F9DC94;
 }
